# b-knowledge

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  README.md  RELEASE_NOTES_v0.1.md  audit_i18n.js  build-deploy.sh  loc_eb829f0.md  package-lock.json  package.json  plan.md  skills-lock.json
advance-rag/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.offline  __init__.py  config.py  connector_sync_worker.py  embed_constants.py  embedding_worker.py  entrypoint.sh  executor_wrapper.py  local_embedding_utils.py  pyproject.toml  system_tenant.py  test_embd.py  web_crawl_worker.py
advance-rag/api/: advanced_tasks.py  datasets.py  documents.py  health.py  main.py  sync.py
advance-rag/api/db/: __init__.py  db_models.py
advance-rag/api/utils/: __init__.py  api_utils.py  commands.py  common.py  configs.py  crypt.py  email_templates.py  file_utils.py  health_utils.py  image_utils.py  json_encode.py  log_utils.py  memory_utils.py  tenant_utils.py  validation_utils.py  web_utils.py
advance-rag/common/: api_helpers.py  config_utils.py  connection_utils.py  constants.py  crypto_utils.py  decorator.py  encoding_utils.py  exceptions.py  file_type_utils.py  file_utils.py  float_utils.py  http_client.py  json_utils.py  log_utils.py  mcp_tool_call_conn.py  memory_utils.py  metadata_utils.py  misc_utils.py  parser_config_utils.py  query_base.py  serialization_utils.py  settings.py  signal_utils.py  string_utils.py  text_utils.py  time_utils.py  token_utils.py  versions.py
advance-rag/common/data_source/: __init__.py  airtable_connector.py  blob_connector.py  box_connector.py  config.py  confluence_connector.py  dingtalk_ai_table_connector.py  discord_connector.py  dropbox_connector.py  exceptions.py  html_utils.py  imap_connector.py  models.py  moodle_connector.py  notion_connector.py  rdbms_connector.py  seafile_connector.py  sharepoint_connector.py  slack_connector.py  teams_connector.py  utils.py
advance-rag/common/doc_store/: doc_store_base.py  es_conn_base.py  es_conn_pool.py  infinity_conn_base.py  infinity_conn_pool.py  ob_conn_base.py  ob_conn_pool.py
advance-rag/conf/: doc_meta_es_mapping.json  doc_meta_infinity_mapping.json  infinity_mapping.json  llm_factories.json  mapping.json  message_infinity_mapping.json  os_mapping.json  service_conf.yaml  system_settings.json
advance-rag/db/: __init__.py  db_models.py  db_utils.py  init_data.py  reload_config_base.py  runtime_config.py
advance-rag/db/joint_services/: tenant_model_service.py
advance-rag/db/services/: __init__.py  canvas_service.py  common_service.py  connector_service.py  doc_metadata_service.py  document_service.py  file2document_service.py  file_service.py  knowledgebase_service.py  langfuse_service.py  llm_service.py  pipeline_operation_log_service.py  task_service.py  tenant_llm_service.py  user_canvas_version.py  user_service.py
advance-rag/deepdoc/: README.md  README_zh.md  __init__.py
advance-rag/deepdoc/parser/: __init__.py  docling_parser.py  docx_parser.py  epub_parser.py  excel_parser.py  figure_parser.py  html_parser.py  json_parser.py  markdown_parser.py  mineru_parser.py  paddleocr_parser.py  pdf_parser.py  ppt_parser.py  tcadp_parser.py  txt_parser.py  utils.py
advance-rag/deepdoc/vision/: __init__.py  layout_recognizer.py  ocr.py  operators.py  postprocess.py  recognizer.py  seeit.py  t_ocr.py  t_recognizer.py  table_structure_recognizer.py
advance-rag/memory/services/: messages.py  query.py
advance-rag/memory/utils/: aggregation_utils.py  es_conn.py  highlight_utils.py  (+4 more)
advance-rag/rag/: __init__.py  benchmark.py  raptor.py  settings.py
advance-rag/tests/: conftest.py  test_adr_parser.py  test_agent_consumer.py  test_agent_executor.py  test_agent_node_executor.py  test_agent_tools.py  test_agent_tools_registry.py  test_canvas_version_release.py  test_chat_model.py  test_clinical_parser.py  test_code_graph.py  test_code_graph_constants.py  test_code_graph_models.py  test_code_graph_pipeline.py  test_code_parser.py  test_connector_test_connection.py  test_cross_kb_collision_guard.py  test_crypto_utils.py  test_deadlock_retry.py  test_delta_sync.py  test_document_service.py  test_e2e_parse_index.py  test_e2e_pipeline.py  test_email_parser.py  test_embedding_model.py  test_embedding_registry.py  test_encoding_utils.py  test_epub_parser_registration.py  test_file_type_utils.py  test_file_utils.py  test_float_utils.py  test_flow_hierarchical_merger.py  test_flow_pipeline.py  test_flow_splitter.py  test_graphrag_entity_resolution.py  test_graphrag_search.py  test_graphrag_utils.py  test_json_utils.py  test_knowledgebase_service.py  test_laws_parser.py  (+28 more)
converter/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.offline  pyproject.toml  requirements.txt  start-converter.cmd  start.sh
converter/src/: __init__.py  config.py  converter.py  excel_converter.py  logger.py  pdf_processor.py  powerpoint_converter.py  word_converter.py  worker.py
converter/tests/: conftest.py  test_config.py  test_converter.py  test_excel_converter.py  test_pdf_processor.py  test_powerpoint_converter.py  test_word_converter.py  test_worker_e2e.py
py-rag/: Dockerfile  __init__.py  executor_wrapper.py  pyproject.toml
py-rag/api/: __init__.py  chunks.py  datasets.py  documents.py  models.py
py-rag/conf/: service_conf.yaml
(+2759 files in other folders)
