[project]
name = "converter"
version = "0.1.0"
description = "Document converter worker — Office/PDF conversion via LibreOffice"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "pdfminer.six>=20231228",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
