[project]
name = "py-rag"
version = "0.1.0"
description = "RAG pipeline service for b-knowledge, extracted from RAGFlow"
requires-python = ">=3.10"
dependencies = [
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database (Peewee + PostgreSQL)
    "peewee>=3.17.0",
    "psycopg2-binary>=2.9.9",

    # RAGFlow dependencies
    "redis>=5.0.0",
    "minio>=7.2.0",
    "elasticsearch>=8.0.0",
    "ruamel.yaml>=0.18.0",
    "strenum>=0.4.15",
    "filelock>=3.13.0",
    "xxhash>=3.4.0",
    "itsdangerous>=2.1.0",
    "quart-auth>=0.10.0",

    # NLP / ML
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",

    # Document parsing
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",

    # Utilities
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "common*", "db*", "deepdoc*", "rag*"]
